batching initial test

--- a/batching.ipynb
+++ b/batching.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T05:21:52.584685Z",
-     "start_time": "2025-12-03T05:21:52.580903Z"
+     "end_time": "2025-12-03T05:45:26.562288Z",
+     "start_time": "2025-12-03T05:45:25.916905Z"
     }
    },
    "cell_type": "code",
@@ -17,6 +17,8 @@
     "from openai import OpenAI\n",
     "import os\n",
     "\n",
+    "BATH_SIZE_MAX = 50000\n",
+    "\n",
     "with open(\"SpacyProcessing/spacy_unique_ingredients.txt\", \"r\", encoding=\"utf-8\") as f:\n",
     "    UNIQUE_INGREDIENTS = f.read()\n",
     "\n",
@@ -26,13 +28,13 @@
    ],
    "id": "fa415d94dbb5597a",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T05:17:49.486368Z",
-     "start_time": "2025-12-03T05:17:48.822528Z"
+     "end_time": "2025-12-03T05:45:27.169076Z",
+     "start_time": "2025-12-03T05:45:26.567519Z"
     }
    },
    "cell_type": "code",
@@ -48,7 +50,8 @@
     "\n",
     "# 1. Load your data\n",
     "print(f\"Loading data from {INPUT_CSV}...\")\n",
-    "df = pd.read_csv(INPUT_CSV)\n",
+    "df = pd.read_csv(INPUT_CSV).sort_values(by=\"fdc_id\", ascending=True).head(100)\n",
+    "print(len(df))\n",
     "df.head(3)"
    ],
    "id": "fc6134cd26d735c9",
@@ -57,7 +60,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading data from data/raw/usda_2022_food_branded_experimental_DESCRIPTION_ONLY.csv...\n"
+      "Loading data from data/raw/usda_2022_food_branded_experimental_DESCRIPTION_ONLY.csv...\n",
+      "100\n"
      ]
     },
     {
@@ -112,18 +116,18 @@
        "</div>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T05:22:10.990862Z",
-     "start_time": "2025-12-03T05:22:10.988962Z"
+     "end_time": "2025-12-03T05:45:27.195022Z",
+     "start_time": "2025-12-03T05:45:27.192777Z"
     }
    },
    "cell_type": "code",
@@ -134,101 +138,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You are a culinary data annotator.\n",
-      "Your job is to map a retail food product name to exactly one canonical ingredient label.\n",
+      "**Role:** Culinary Data Annotator\n",
+      "**Task:** Map product names to **one** canonical ingredient label (lowercase string only).\n",
       "\n",
-      "Return **only** a plain lowercase string — no JSON, no lists, no quotes, no commentary.\n",
-      "\n",
-      "---\n",
-      "\n",
-      "# TASK\n",
-      "Given a product name from a grocery or restaurant context, output the **single best ingredient label** it represents.\n",
-      "\n",
-      "Use the ALLOWED_INGREDIENTS list as your **reference vocabulary**, **not a restriction**.\n",
-      "These ingredients are *examples* drawn from a prior extraction process.\n",
-      "If none match well, you may output **any realistic ingredient name**, even if it is not in ALLOWED_INGREDIENTS.\n",
-      "\n",
-      "---\n",
-      "\n",
-      "# RULES (perform mentally)\n",
-      "\n",
-      "## 1. Normalize text\n",
-      "Lowercase everything; remove punctuation, symbols, brand names, marketing language (organic, classic, premium), sizes/quantities (oz, pack, 12-ct), and prep descriptors (sliced, shredded, spicy).\n",
-      "Preserve identity-defining terms (olive oil, soy sauce, apple cider vinegar, taco seasoning, pudding mix).\n",
-      "\n",
-      "## 2. Remove usage phrases\n",
-      "Drop “for X”, “with X”, “on X”.\n",
-      "Interpret only the ingredient identity, not the intended use.\n",
-      "\n",
-      "## 3. Ignore packaging\n",
-      "Ignore container words (bottle, jar, pack, frozen, canned) unless part of a canonical identity (e.g., taco seasoning, cake mix, pudding mix, salad dressing).\n",
-      "\n",
-      "## 4. Match to ALLOWED_INGREDIENTS\n",
-      "Choose the most specific valid match.\n",
-      "If multiple matches, pick the one that captures the core ingredient identity.\n",
-      "If none match closely, **create a new ingredient label** that best reflects the product’s true food identity.\n",
-      "\n",
-      "## 5. Inference\n",
-      "Infer identities only when overwhelmingly clear:\n",
-      "- soda → baking soda\n",
-      "- pepper (spice/seasoning context) → black pepper\n",
-      "Preserve identity-defining flavors/types (barbecue sauce, ranch seasoning, chocolate pudding mix).\n",
-      "\n",
-      "## 6. Singularization\n",
-      "Normalize to singular unless the plural is canonical.\n",
-      "Do not modify true multi-word identities (ground beef, pork shoulder, chocolate pudding mix).\n",
-      "\n",
-      "## 7. If no allowed ingredient fits\n",
-      "Produce a short, real ingredient name (e.g., pea protein, gochujang, tamarind paste).\n",
-      "Do **not** return a dish name.\n",
-      "\n",
-      "## 8. Output format\n",
-      "Return exactly one plain lowercase ingredient label.\n",
-      "No punctuation, commas, conjunctions, or explanations.\n",
-      "\n",
-      "---\n",
-      "\n",
-      "# SPECIAL LOGIC\n",
-      "\n",
-      "### Animal proteins\n",
-      "Keep meat cuts (ground beef, chicken breast).\n",
-      "Collapse seafood cuts (salmon fillet → salmon).\n",
-      "Keep processed meats distinct (bacon, sausage, ham, pepperoni).\n",
-      "\n",
-      "### Tomato products\n",
-      "Keep explicit items (tomato paste, tomato sauce).\n",
-      "Whole/diced/etc. → tomato.\n",
-      "\n",
-      "### Oils\n",
-      "Keep explicit oil types.\n",
-      "Generic → oil.\n",
-      "\n",
-      "### Mint\n",
-      "Herb → mint.\n",
-      "Candy → chocolate mint candy.\n",
-      "\n",
-      "### Mixes\n",
-      "Keep canonical identities (devils food cake mix, chocolate pudding mix, taco seasoning).\n",
-      "\n",
-      "### Seasonings / coatings\n",
-      "coating, breading, batter → breadcrumb or batter mix\n",
-      "seasoning/spice mix → appropriate seasoning label\n",
-      "\n",
-      "### Produce peppers\n",
-      "bell pepper, jalapeño, etc. remain produce.\n",
-      "\n",
-      "---\n",
+      "# INSTRUCTIONS\n",
+      "1.  **Normalize:** Remove brands, quantities, packaging (can, box), marketing (organic, premium), and prep descriptors (sliced, spicy).\n",
+      "    * *Keep* identity terms (e.g., *olive oil, taco seasoning, pudding mix*).\n",
+      "2.  **Vocabulary:** Use `ALLOWED_INGREDIENTS` as a **priority list**, not a hard limit. If no match fits, output the best real ingredient name.\n",
+      "3.  **Heuristics:**\n",
+      "    * **Proteins:** Keep meat cuts (*ground beef*) and processed meats (*bacon*). Generalize seafood (*salmon fillet* → *salmon*).\n",
+      "    * **Pantry:** Keep explicit types (*tomato paste, olive oil*). Infer context (*soda* → *baking soda*, *coating* → *breadcrumb*).\n",
+      "    * **Mixes:** Keep canonical mixes (*cake mix, taco seasoning*).\n",
+      "    * **Formatting:** Singularize nouns. Drop \"for/with X\". No dish names.\n",
       "\n",
       "# EXAMPLES\n",
-      "kraft shake ’n bake original recipe coating for pork → breadcrumb\n",
+      "kraft shake ’n bake coating for pork → breadcrumb\n",
       "mccormick taco seasoning mix → taco seasoning\n",
-      "tempura batter mix for shrimp → batter mix\n",
+      "tempura batter mix → batter mix\n",
       "barilla spaghetti no. 5 → spaghetti\n",
       "la croix lime sparkling water → water\n",
-      "restaurant arroz con habichuelas colorados → red bean\n",
-      "gochujang hot pepper paste → gochujang\n",
-      "\n",
-      "---\n",
+      "arroz con habichuelas colorados → red bean\n",
       "\n",
       "ALLOWED_INGREDIENTS:\n",
       "salt\n",
@@ -337,25 +266,17 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 3
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-03T05:45:28.458195Z",
+     "start_time": "2025-12-03T05:45:27.231112Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
-    "# 2. Define your System Prompt (Paste your long >1024 token prompt here)\n",
-    "# Since you mentioned your prompt is long, just paste it entirely below.\n",
-    "system_prompt = \"\"\"\n",
-    "You are a specialized food database assistant.\n",
-    "[...PASTE YOUR FULL 1024+ TOKEN PROMPT HERE...]\n",
-    "Your task is to extract the simple, generic food type from the description.\n",
-    "Remove brand names, quantities, and packaging details.\n",
-    "Return ONLY the lowercase food type.\n",
-    "\"\"\"\n",
-    "\n",
-    "# 3. Prepare the Batch Requests\n",
     "batch_requests = []\n",
     "\n",
     "print(\"Preparing batch requests...\")\n",
@@ -370,11 +291,10 @@
     "        \"body\": {\n",
     "            \"model\": MODEL_NAME,  # Using gpt-5-nano-2025-08-07\n",
     "            \"messages\": [\n",
-    "                {\"role\": \"system\", \"content\": system_prompt},\n",
+    "                {\"role\": \"system\", \"content\": SYSTEM_MSG_PRODUCTS},\n",
     "                {\"role\": \"user\", \"content\": row['description']}\n",
     "            ],\n",
-    "            \"max_tokens\": 50,  # Keep this low for simple extraction to save money\n",
-    "            \"temperature\": 0\n",
+    "            # \"max_completion_tokens\": 50,  # Keep this low for simple extraction to save money\n",
     "        }\n",
     "    }\n",
     "    batch_requests.append(request_body)\n",
@@ -408,15 +328,144 @@
     "print(\"-\" * 30)\n",
     "print(\"SAVE THIS BATCH ID. You will need it for Script 2.\")"
    ],
-   "id": "1bdf1f49b53a3db8"
+   "id": "1bdf1f49b53a3db8",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preparing batch requests...\n",
+      "Saved 100 requests to batch_input.jsonl\n",
+      "Uploading file to OpenAI...\n",
+      "File uploaded. File ID: file-4uteefXLiudkR6cU76ioAC\n",
+      "Starting batch job...\n",
+      "------------------------------\n",
+      "SUCCESS! Batch Job Created.\n",
+      "Batch ID: batch_692fce7942c48190913fce8d55e48ee5\n",
+      "------------------------------\n",
+      "SAVE THIS BATCH ID. You will need it for Script 2.\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-03T05:58:15.872429Z",
+     "start_time": "2025-12-03T05:58:15.301851Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "source": [
+    "# CONFIGURATION\n",
+    "BATCH_ID = batch_job.id  # <--- PASTE YOUR BATCH ID HERE\n",
+    "OUTPUT_JSONL = \"batch_output.jsonl\"  # Where to save raw AI results\n",
+    "FINAL_CSV = \"mapped_ingredients_only.csv\"  # <--- New smaller file\n",
+    "\n",
+    "API_KEY = os.getenv(\"OPENAI_API_KEY\")  # Ensure your env var is set\n",
+    "\n",
+    "\n",
+    "def get_results():\n",
+    "    # 1. Check Status\n",
+    "    print(f\"Checking status for {BATCH_ID}...\")\n",
+    "    try:\n",
+    "        batch_job = client.batches.retrieve(BATCH_ID)\n",
+    "        print(f\"Current Status: {batch_job.status}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error retrieving batch: {e}\")\n",
+    "        return\n",
+    "\n",
+    "    if batch_job.status == \"failed\":\n",
+    "        print(f\"Batch Failed. Error: {batch_job.errors}\")\n",
+    "        return\n",
+    "\n",
+    "    if batch_job.status != \"completed\":\n",
+    "        print(\"Job is not finished yet. Try again later.\")\n",
+    "        return\n",
+    "\n",
+    "    # 2. Download Results\n",
+    "    print(\"Job completed! Downloading results...\")\n",
+    "    output_file_id = batch_job.output_file_id\n",
+    "    file_response = client.files.content(output_file_id)\n",
+    "    content = file_response.content\n",
+    "\n",
+    "    with open(OUTPUT_JSONL, \"wb\") as f:\n",
+    "        f.write(content)\n",
+    "    print(f\"Raw results saved to {OUTPUT_JSONL}\")\n",
+    "\n",
+    "    # 3. Parse Results\n",
+    "    print(\"Processing results...\")\n",
+    "    data_list = []\n",
+    "\n",
+    "    with open(OUTPUT_JSONL, \"r\") as f:\n",
+    "        for line in f:\n",
+    "            data = json.loads(line)\n",
+    "            custom_id = data['custom_id']  # This is your fdc_id\n",
+    "\n",
+    "            # Extract content or handle error\n",
+    "            if data['response']['status_code'] == 200:\n",
+    "                ingredient = data['response']['body']['choices'][0]['message']['content'].strip()\n",
+    "            else:\n",
+    "                ingredient = \"ERROR_API_FAILURE\"\n",
+    "\n",
+    "            # Append to list\n",
+    "            data_list.append({\n",
+    "                \"fdc_id\": custom_id,\n",
+    "                \"mapped_ingredient\": ingredient\n",
+    "            })\n",
+    "\n",
+    "    # 4. Save New CSV (Only fdc_id and mapped_ingredient)\n",
+    "    df_new = pd.DataFrame(data_list)\n",
+    "\n",
+    "    # Optional: Sort by ID if you want neatness\n",
+    "    # df_new = df_new.sort_values(by=\"fdc_id\")\n",
+    "\n",
+    "    df_new.to_csv(FINAL_CSV, index=False)\n",
+    "\n",
+    "    print(\"-\" * 30)\n",
+    "    print(f\"DONE! Saved {len(df_new)} rows to {FINAL_CSV}\")\n",
+    "    print(df_new.head())\n",
+    "\n",
+    "\n",
+    "get_results()"
+   ],
+   "id": "82ad31a52a15188c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking status for batch_692fce7942c48190913fce8d55e48ee5...\n",
+      "Current Status: completed\n",
+      "Job completed! Downloading results...\n",
+      "Raw results saved to batch_output.jsonl\n",
+      "Processing results...\n",
+      "------------------------------\n",
+      "DONE! Saved 100 rows to mapped_ingredients_only.csv\n",
+      "   fdc_id mapped_ingredient\n",
+      "0  167512        buttermilk\n",
+      "1  167513             dough\n",
+      "2  167514        breadcrumb\n",
+      "3  167515  allpurpose flour\n",
+      "4  167516        buttermilk\n"
+     ]
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-03T05:45:29.621042Z",
+     "start_time": "2025-12-03T05:45:29.619858Z"
+    }
+   },
+   "cell_type": "code",
    "source": "",
-   "id": "82ad31a52a15188c"
+   "id": "429812e24d6a6012",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
