--- a/create_batches.ipynb
+++ b/create_batches.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T05:45:26.562288Z",
-     "start_time": "2025-12-03T05:45:25.916905Z"
+     "end_time": "2025-12-03T06:27:39.518282Z",
+     "start_time": "2025-12-03T06:27:38.890712Z"
     }
    },
    "cell_type": "code",
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T05:45:27.169076Z",
-     "start_time": "2025-12-03T05:45:26.567519Z"
+     "end_time": "2025-12-03T06:27:48.793065Z",
+     "start_time": "2025-12-03T06:27:48.175422Z"
     }
    },
    "cell_type": "code",
@@ -42,7 +42,7 @@
     "# CONFIGURATION\n",
     "INPUT_CSV = \"data/raw/usda_2022_food_branded_experimental_DESCRIPTION_ONLY.csv\"  # Your source file\n",
     "BATCH_FILE_NAME = \"batch_input.jsonl\"  # The file we will send to OpenAI\n",
-    "MODEL_NAME = \"gpt-5-nano-2025-08-07\"  # <--- UPDATED MODEL\n",
+    "MODEL_NAME = \"gpt-4o-mini-2024-07-18\"  # this model does not think\n",
     "API_KEY = os.getenv(\"OPENAI_API_KEY\")  # Ensure your env var is set\n",
     "\n",
     "# Initialize Client\n",
@@ -126,228 +126,149 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T05:45:27.195022Z",
-     "start_time": "2025-12-03T05:45:27.192777Z"
+     "end_time": "2025-12-03T06:27:52.089368Z",
+     "start_time": "2025-12-03T06:27:52.087402Z"
     }
    },
    "cell_type": "code",
-   "source": "print(SYSTEM_MSG_PRODUCTS)",
+   "source": "# print(SYSTEM_MSG_PRODUCTS)",
    "id": "244e70fcf248251f",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**Role:** Culinary Data Annotator\n",
-      "**Task:** Map product names to **one** canonical ingredient label (lowercase string only).\n",
-      "\n",
-      "# INSTRUCTIONS\n",
-      "1.  **Normalize:** Remove brands, quantities, packaging (can, box), marketing (organic, premium), and prep descriptors (sliced, spicy).\n",
-      "    * *Keep* identity terms (e.g., *olive oil, taco seasoning, pudding mix*).\n",
-      "2.  **Vocabulary:** Use `ALLOWED_INGREDIENTS` as a **priority list**, not a hard limit. If no match fits, output the best real ingredient name.\n",
-      "3.  **Heuristics:**\n",
-      "    * **Proteins:** Keep meat cuts (*ground beef*) and processed meats (*bacon*). Generalize seafood (*salmon fillet* → *salmon*).\n",
-      "    * **Pantry:** Keep explicit types (*tomato paste, olive oil*). Infer context (*soda* → *baking soda*, *coating* → *breadcrumb*).\n",
-      "    * **Mixes:** Keep canonical mixes (*cake mix, taco seasoning*).\n",
-      "    * **Formatting:** Singularize nouns. Drop \"for/with X\". No dish names.\n",
-      "\n",
-      "# EXAMPLES\n",
-      "kraft shake ’n bake coating for pork → breadcrumb\n",
-      "mccormick taco seasoning mix → taco seasoning\n",
-      "tempura batter mix → batter mix\n",
-      "barilla spaghetti no. 5 → spaghetti\n",
-      "la croix lime sparkling water → water\n",
-      "arroz con habichuelas colorados → red bean\n",
-      "\n",
-      "ALLOWED_INGREDIENTS:\n",
-      "salt\n",
-      "sugar\n",
-      "egg\n",
-      "onion\n",
-      "butter\n",
-      "garlic\n",
-      "water\n",
-      "pepper\n",
-      "flour\n",
-      "milk\n",
-      "olive oil\n",
-      "vanilla\n",
-      "brown sugar\n",
-      "cinnamon\n",
-      "tomato\n",
-      "soda\n",
-      "lemon juice\n",
-      "black pepper\n",
-      "allpurpose flour\n",
-      "margarine\n",
-      "carrot\n",
-      "cream cheese\n",
-      "sour cream\n",
-      "celery\n",
-      "parsley\n",
-      "oil\n",
-      "vegetable oil\n",
-      "beef\n",
-      "vanilla extract\n",
-      "green onion\n",
-      "parmesan cheese\n",
-      "mayonnaise\n",
-      "pecan\n",
-      "cheddar cheese\n",
-      "unsalted butter\n",
-      "mushroom\n",
-      "cream\n",
-      "nutmeg\n",
-      "kosher salt\n",
-      "vinegar\n",
-      "green pepper\n",
-      "ginger\n",
-      "nut\n",
-      "basil\n",
-      "honey\n",
-      "virgin olive oil\n",
-      "potato\n",
-      "oregano\n",
-      "chicken breast\n",
-      "worcestershire\n",
-      "thyme\n",
-      "soy\n",
-      "paprika\n",
-      "cornstarch\n",
-      "powdered sugar\n",
-      "cumin\n",
-      "chicken\n",
-      "bacon\n",
-      "chili\n",
-      "pineapple\n",
-      "chicken broth\n",
-      "walnut\n",
-      "granulated sugar\n",
-      "shortening\n",
-      "red onion\n",
-      "freshly black pepper\n",
-      "raisin\n",
-      "egg yolk\n",
-      "cilantro\n",
-      "buttermilk\n",
-      "lemon\n",
-      "rice\n",
-      "orange juice\n",
-      "red pepper\n",
-      "cocoa\n",
-      "cheese\n",
-      "banana\n",
-      "lime juice\n",
-      "cayenne pepper\n",
-      "strawberry\n",
-      "butter margarine\n",
-      "apple\n",
-      "broccoli\n",
-      "cream mushroom soup\n",
-      "mozzarella cheese\n",
-      "almond\n",
-      "juice\n",
-      "mustard\n",
-      "zucchini\n",
-      "whipping cream\n",
-      "dijon mustard\n",
-      "cream chicken soup\n",
-      "cool whip\n",
-      "egg white\n",
-      "canola oil\n",
-      "spinach\n",
-      "confectioner\n",
-      "tomato paste\n",
-      "cube\n",
-      "scallion\n",
-      "room temperature\n",
-      "chocolate chip\n",
-      "red bell pepper\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T05:45:28.458195Z",
-     "start_time": "2025-12-03T05:45:27.231112Z"
+     "end_time": "2025-12-03T06:27:53.315719Z",
+     "start_time": "2025-12-03T06:27:53.312027Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "batch_requests = []\n",
+    "def create_and_run_batch(\n",
+    "        df,\n",
+    "        model_name,\n",
+    "        system_message,\n",
+    "        batch_file_name,\n",
+    "        client\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Creates batch requests from a dataframe, saves them to JSONL,\n",
+    "    uploads the file to OpenAI, and launches a batch job.\n",
+    "    \"\"\"\n",
     "\n",
-    "print(\"Preparing batch requests...\")\n",
-    "for index, row in df.iterrows():\n",
-    "    # We use fdc_id as the custom_id to map it back later\n",
-    "    custom_id = str(row['fdc_id'])\n",
+    "    batch_requests = []\n",
     "\n",
-    "    request_body = {\n",
-    "        \"custom_id\": custom_id,\n",
-    "        \"method\": \"POST\",\n",
-    "        \"url\": \"/v1/chat/completions\",\n",
-    "        \"body\": {\n",
-    "            \"model\": MODEL_NAME,  # Using gpt-5-nano-2025-08-07\n",
-    "            \"messages\": [\n",
-    "                {\"role\": \"system\", \"content\": SYSTEM_MSG_PRODUCTS},\n",
-    "                {\"role\": \"user\", \"content\": row['description']}\n",
-    "            ],\n",
-    "            # \"max_completion_tokens\": 50,  # Keep this low for simple extraction to save money\n",
+    "    print(\"Preparing batch requests...\")\n",
+    "    for index, row in df.iterrows():\n",
+    "        # Use fdc_id as custom_id\n",
+    "        custom_id = str(row['fdc_id'])\n",
+    "\n",
+    "        request_body = {\n",
+    "            \"custom_id\": custom_id,\n",
+    "            \"method\": \"POST\",\n",
+    "            \"url\": \"/v1/chat/completions\",\n",
+    "            \"body\": {\n",
+    "                \"model\": model_name,\n",
+    "                \"messages\": [\n",
+    "                    {\"role\": \"system\", \"content\": system_message},\n",
+    "                    {\"role\": \"user\", \"content\": row['description']}\n",
+    "                ],\n",
+    "                \"max_tokens\": 10,  # only use this if using 4o-mini\n",
+    "            }\n",
     "        }\n",
-    "    }\n",
-    "    batch_requests.append(request_body)\n",
+    "        batch_requests.append(request_body)\n",
     "\n",
-    "# 4. Save to JSONL\n",
-    "with open(BATCH_FILE_NAME, \"w\") as f:\n",
-    "    for req in batch_requests:\n",
-    "        f.write(json.dumps(req) + \"\\n\")\n",
+    "    # Save JSONL\n",
+    "    print(\"Saving batch file...\")\n",
+    "    with open(batch_file_name, \"w\") as f:\n",
+    "        for req in batch_requests:\n",
+    "            f.write(json.dumps(req) + \"\\n\")\n",
     "\n",
-    "print(f\"Saved {len(batch_requests)} requests to {BATCH_FILE_NAME}\")\n",
+    "    print(f\"Saved {len(batch_requests)} requests to {batch_file_name}\")\n",
     "\n",
-    "# 5. Upload File to OpenAI\n",
-    "print(\"Uploading file to OpenAI...\")\n",
-    "batch_file = client.files.create(\n",
-    "    file=open(BATCH_FILE_NAME, \"rb\"),\n",
-    "    purpose=\"batch\"\n",
-    ")\n",
-    "print(f\"File uploaded. File ID: {batch_file.id}\")\n",
+    "    # Upload to OpenAI\n",
+    "    print(\"Uploading file to OpenAI...\")\n",
+    "    batch_file = client.files.create(\n",
+    "        file=open(batch_file_name, \"rb\"),\n",
+    "        purpose=\"batch\"\n",
+    "    )\n",
+    "    print(f\"File uploaded. File ID: {batch_file.id}\")\n",
     "\n",
-    "# 6. Create the Batch Job\n",
-    "print(\"Starting batch job...\")\n",
-    "batch_job = client.batches.create(\n",
-    "    input_file_id=batch_file.id,\n",
-    "    endpoint=\"/v1/chat/completions\",\n",
-    "    completion_window=\"24h\"\n",
-    ")\n",
+    "    # Start batch job\n",
+    "    print(\"Starting batch job...\")\n",
+    "    batch_job = client.batches.create(\n",
+    "        input_file_id=batch_file.id,\n",
+    "        endpoint=\"/v1/chat/completions\",\n",
+    "        completion_window=\"24h\"\n",
+    "    )\n",
     "\n",
-    "print(\"-\" * 30)\n",
-    "print(f\"SUCCESS! Batch Job Created.\")\n",
-    "print(f\"Batch ID: {batch_job.id}\")\n",
-    "print(\"-\" * 30)\n",
-    "print(\"SAVE THIS BATCH ID. You will need it for Script 2.\")"
+    "    print(\"-\" * 30)\n",
+    "    print(\"SUCCESS! Batch Job Created.\")\n",
+    "    print(f\"Batch ID: {batch_job.id}\")\n",
+    "    print(\"-\" * 30)\n",
+    "    print(\"SAVE THIS BATCH ID. You will need it for Script 2.\")\n",
+    "\n",
+    "    return batch_job"
    ],
-   "id": "1bdf1f49b53a3db8",
+   "id": "dbb55cc25d912336",
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-03T06:28:00.919572Z",
+     "start_time": "2025-12-03T06:27:58.742704Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "batch_job = create_and_run_batch(\n",
+    "    df=df,\n",
+    "    model_name=MODEL_NAME,\n",
+    "    system_message=SYSTEM_MSG_PRODUCTS,\n",
+    "    batch_file_name=BATCH_FILE_NAME,\n",
+    "    client=client\n",
+    ")"
+   ],
+   "id": "6f4d0cbad2248912",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Preparing batch requests...\n",
+      "Saving batch file...\n",
       "Saved 100 requests to batch_input.jsonl\n",
       "Uploading file to OpenAI...\n",
-      "File uploaded. File ID: file-4uteefXLiudkR6cU76ioAC\n",
+      "File uploaded. File ID: file-Wyr3mCRvQxVzYxudUwKAe2\n",
       "Starting batch job...\n",
       "------------------------------\n",
       "SUCCESS! Batch Job Created.\n",
-      "Batch ID: batch_692fce7942c48190913fce8d55e48ee5\n",
+      "Batch ID: batch_692fd8712d9c8190bfc6acb8578d5fd7\n",
       "------------------------------\n",
       "SAVE THIS BATCH ID. You will need it for Script 2.\n"
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "b53c396febb268fc"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "d1e78a75cdd194c"
   },
   {
    "metadata": {
