--- a/single_run/process_products_new.ipynb
+++ b/single_run/process_products_new.ipynb
@@ -3,45 +3,48 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T20:40:39.862664Z",
-     "start_time": "2025-12-03T20:40:39.851103Z"
+     "end_time": "2025-12-03T20:35:54.371027Z",
+     "start_time": "2025-12-03T20:35:53.342869Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "load_dotenv()  # Take environment variables from .env\n",
-    "import pandas as pd\n",
     "import json\n",
-    "from openai import OpenAI\n",
     "import os\n",
-    "from math import ceil\n",
     "\n",
-    "num_batches_run = 4  # 4 uploaded successfully, 100k rows\n",
-    "start_offset = 25000 * num_batches_run\n",
+    "import pandas as pd\n",
+    "from dotenv import load_dotenv\n",
+    "from openai import AsyncOpenAI\n",
     "\n",
-    "BATCH_SIZE = 25000\n",
+    "load_dotenv()\n",
+    "# ------------- CONFIG -------------\n",
+    "MODEL_NAME = \"gpt-4o-mini-2024-07-18\"\n",
+    "API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
     "\n",
-    "with open(\"SpacyProcessing/spacy_unique_ingredients.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+    "ID_COLUMN = \"fdc_id\"  # unique identifier per row\n",
+    "TEXT_COLUMN = \"description\"  # text you send in the user message\n",
+    "\n",
+    "OUTPUT_PATH = \"results_async.csv\"  # where we store results\n",
+    "SYSTEM_PROMPT_PATH = \"../prompts/system_message_products.txt\"\n",
+    "UNIQUE_INGREDIENTS_PATH = \"../SpacyProcessing/spacy_unique_ingredients.txt\"\n",
+    "\n",
+    "CONCURRENCY = 100  # how many requests in-flight at once\n",
+    "CHUNK_SIZE = 5000  # how many rows to schedule before flushing to disk\n",
+    "MAX_RETRIES = 5  # per-request retry attempts\n",
+    "\n",
+    "# ------------- LOAD PROMPT -------------\n",
+    "with open(UNIQUE_INGREDIENTS_PATH, \"r\", encoding=\"utf-8\") as f:\n",
     "    UNIQUE_INGREDIENTS = f.read()\n",
     "\n",
-    "with open(\"prompts/system_message_products.txt\", \"r\", encoding=\"utf-8\") as f:\n",
-    "    SYSTEM_MSG_PRODUCTS = f.read()\n",
-    "    SYSTEM_MSG_PRODUCTS += UNIQUE_INGREDIENTS\n",
+    "with open(SYSTEM_PROMPT_PATH, \"r\", encoding=\"utf-8\") as f:\n",
+    "    SYSTEM_MSG_PRODUCTS = f.read() + UNIQUE_INGREDIENTS\n",
     "\n",
-    "# CONFIGURATION\n",
-    "INPUT_CSV = \"data/raw/usda_2022_food_branded_experimental_DESCRIPTION_ONLY.csv\"  # Your source file\n",
-    "TRACKER_FILE = \"batch_tracker.json\"  # Where we save Batch IDs\n",
-    "BATCH_FILE_NAME = \"batch_input.jsonl\"  # The file we will send to OpenAI\n",
-    "MODEL_NAME = \"gpt-4o-mini-2024-07-18\"  # this model does not think\n",
-    "API_KEY = os.getenv(\"OPENAI_API_KEY\")  # Ensure your env var is set\n",
-    "# Initialize Client\n",
-    "client = OpenAI(api_key=API_KEY)"
+    "# ------------- CLIENT -------------\n",
+    "client = AsyncOpenAI(api_key=API_KEY)"
    ],
    "id": "fa415d94dbb5597a",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 1
   },
   {
    "metadata": {
@@ -191,8 +194,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T20:41:18.563582Z",
-     "start_time": "2025-12-03T20:41:18.155970Z"
+     "end_time": "2025-12-03T15:39:21.311874Z",
+     "start_time": "2025-12-03T15:39:20.788582Z"
     }
    },
    "cell_type": "code",
@@ -217,7 +220,7 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 3
   },
   {
    "metadata": {
