finished code, shows nan rows

--- a/combine_data/combine_batches_single_run.ipynb
+++ b/combine_data/combine_batches_single_run.ipynb
@@ -542,6 +542,196 @@
    "id": "f6c488b0e6720475",
    "outputs": [],
    "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-04T07:27:05.225369Z",
+     "start_time": "2025-12-04T07:27:05.194782Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# inspect to see NaN's\n",
+    "combined_df[combined_df['response'].isna()]"
+   ],
+   "id": "af05172b742bb60a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "          fdc_id                                        description response\n",
+       "51549     472999                                   MINIS ASSORTMENT      NaN\n",
+       "269105    776874                                                NaN      NaN\n",
+       "482799   1165113                        Yplt Kids Variety Pack 8 Ct      NaN\n",
+       "627926   1310367                                              WRAPS      NaN\n",
+       "741220   1423661              TRADITIONAL TANDOORI NAN, TRADITIONAL      NaN\n",
+       "1033345  1715942              TRADITIONAL TANDOORI NAN, TRADITIONAL      NaN\n",
+       "1074752  1757383                                                NaN      NaN\n",
+       "1074753  1757384                                                NaN      NaN\n",
+       "1074754  1757385                                                NaN      NaN\n",
+       "1074755  1757386                                                NaN      NaN\n",
+       "1074756  1757387                                                NaN      NaN\n",
+       "1074757  1757388                                                NaN      NaN\n",
+       "1074758  1757389                                                NaN      NaN\n",
+       "1074759  1757390                                                NaN      NaN\n",
+       "1296187  1981104              TRADITIONAL TANDOORI NAN, TRADITIONAL      NaN\n",
+       "1533363  2218282                CRUNCHY SHAGGY ROLL, CRUNCHY SHAGGY      NaN\n",
+       "1538151  2223070                                      Aluminum Cans      NaN\n",
+       "1545115  2232401  Consistent size, exact portion control, excell...      NaN"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fdc_id</th>\n",
+       "      <th>description</th>\n",
+       "      <th>response</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>51549</th>\n",
+       "      <td>472999</td>\n",
+       "      <td>MINIS ASSORTMENT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>269105</th>\n",
+       "      <td>776874</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>482799</th>\n",
+       "      <td>1165113</td>\n",
+       "      <td>Yplt Kids Variety Pack 8 Ct</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>627926</th>\n",
+       "      <td>1310367</td>\n",
+       "      <td>WRAPS</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>741220</th>\n",
+       "      <td>1423661</td>\n",
+       "      <td>TRADITIONAL TANDOORI NAN, TRADITIONAL</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1033345</th>\n",
+       "      <td>1715942</td>\n",
+       "      <td>TRADITIONAL TANDOORI NAN, TRADITIONAL</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1074752</th>\n",
+       "      <td>1757383</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1074753</th>\n",
+       "      <td>1757384</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1074754</th>\n",
+       "      <td>1757385</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1074755</th>\n",
+       "      <td>1757386</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1074756</th>\n",
+       "      <td>1757387</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1074757</th>\n",
+       "      <td>1757388</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1074758</th>\n",
+       "      <td>1757389</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1074759</th>\n",
+       "      <td>1757390</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1296187</th>\n",
+       "      <td>1981104</td>\n",
+       "      <td>TRADITIONAL TANDOORI NAN, TRADITIONAL</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1533363</th>\n",
+       "      <td>2218282</td>\n",
+       "      <td>CRUNCHY SHAGGY ROLL, CRUNCHY SHAGGY</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1538151</th>\n",
+       "      <td>2223070</td>\n",
+       "      <td>Aluminum Cans</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1545115</th>\n",
+       "      <td>2232401</td>\n",
+       "      <td>Consistent size, exact portion control, excell...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 10
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "1599117668f987a5"
   }
  ],
  "metadata": {
